--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <!-- Bootstrap JS -->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">s
 <!-- All of our JS code will be transpiled into this bundle.js file -->
 
   </head>
@@ -20,7 +21,7 @@
 <body>
 	<!-- This is where React will deploy the contents it generates -->
 	<div id="app">
-		
+
 	</div>
 		<script type="text/javascript" src="./bundle.js"></script>
 	<!-- <script type="text/javascript" src="./assets/js/chat.js" ></script> -->
