--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <!--  -->
-<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">s
+<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 <!-- All of our JS code will be transpiled into this bundle.js file -->
 
   </head>
@@ -24,6 +24,6 @@
 	<div id="app">
 
 	</div>
-		<script type="text/javascript" src="./bundle.js"></script>
+		<script type="text/javascript" href="/public/bundle.js"></script>
 </body>
 </html>
