--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
 	<!-- This is where React will deploy the contents it generates -->
 	<div id="app">
 
-	</div>
-		<script type="text/javascript" href="/public/bundle.js"></script>
+		<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
